css/main.css
* {
  scrollbar-width: thin;
  scrollbar-color: #18181e rgba(24, 24, 30, 0.76);
  background-color: #23222d;
  font-family: sans-serif;
}

body {
  background-color: #23222d;
}

a {
  color: #FFF;
  text-decoration: none;
}

a:hover {
  color: white;
}

input, select {
  padding: 5px 15px;
  margin-left: 5px;
  border: none;
  border-bottom: 2px solid #d99243;
  border-radius: 5px;
  color: white;
}

input:focus {
  outline: none;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  columns: 2;
  -webkit-columns: 2;
  -moz-columns: 2;
}

.menu {
  position: fixed;
  top: 0;
  display: flex;
  flex-direction: row;
  width: 100%;
  background-color: #18181e;
  justify-content: space-between;
}

.icon-menu {
  display: none;
}

.button-orange {
  background-color: #d99243 !important;
}

.button-orange:hover {
  background-color: #bc8236 !important;
}

.button {
  border-radius: 5px;
  height: 38px;
}

.button, .menu-link {
  padding: 7px 20px;
}

.button-black {
  background-color: #18181e;
}

.button-black:hover {
  background-color: #303036;
}

.menu-left, .menu-right {
  display: flex;
}

.main {
  display: flex;
  color: #f7ab48;
  flex-direction: column;
  margin-top: 38px;
}

.title {
  margin-left: 40px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 20px;
  margin-bottom: 20px;
}

.toolbar {
  margin-right: 40px;
  display: flex;
  flex-direction: row;
  color: white;
}

.toolbar a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-right: 20px;
}

.toolbar span {
  color: white;
  font-size: 20px;
}

.content {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  color: white;
  padding-bottom: 80px;
  margin: 0 40px;
}

img {
  border-radius: 6px;
}

.metacritic {
  padding: 10px;
  line-height: 24px;
  border-radius: 3px;
}

.metacritic-good {
  background-color: #6c3 !important;
}

.time-to-beat {
  display: flex;
  flex-direction: row;
}

.time-to-beat-col {
  width: 200px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.time-to-beat-header {
  display: inline-flex;
  border-bottom: 1px solid white;
}

.time-to-beat-value {
  font-size: larger;
}

.fa-remove, .fa-check, .fa-plus {
  color: #d99243;
}

.collapsible {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.collapsible-header {
  display: flex;
  padding: 5px 20px;
  background-color: #18181e;
  justify-content: space-between;
}

.collapsible-header * {
  background-color: inherit;
}

.collapsible-title, .collapsible-toolbar {
  color: #d99243;
  font-size: 28px;
  display: flex;
  flex-direction: row;
}

.collapsible.title-date {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.collapsible-title-info {
  padding-top: 1px;
  color: white;
  font-size: 16px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 10px;
}

.collapsible-content, .collapsible-content-inner {
  display: inline-flex;
  padding: 20px;
  border: 3px solid #18181e;
  border-top: none;
  margin-bottom: 20px;
}

.collapsible-content {
  flex-direction: column;
}

.collapsible-content-inner {
  flex-direction: row;
  flex-wrap: wrap;
}

.collapsible-content .collapsed {
  height: 0;
  padding: 0;
  opacity: 0;
}

.user-profile-pic {
  width: 22px;
  margin-left: 10px;
  border-radius: 50%;
}

.logout-button {
  font-size: 16px;
  height: 100%;
  align-self: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 7px 15px;
}

.button-black span {
  background-color: inherit;
}

@media (max-width: 700px) {
  .menu {
    display: none;
  }

  .icon-menu {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    background-color: #18181e;
  }

  .menu-link-icon {
    background-color: inherit;
  }

  .menu-link-icon i {
    color: white;
    padding: 3px;
    background-color: inherit;
  }

  .main {
    margin-top: 0;
  }

  .title {
    margin-left: 0;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
  }

  .toolbar, .toolbar .button:not(:first-child) {
    margin-right: 0 !important;
  }
}

@media (max-width: 600px) {
  .content {
    margin: 0 10px;
  }
}

